--- a/Sky.html
+++ b/Sky.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-  
+
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
+    <li><a href="quiz.html">Quiz</a></li>
     <li><a href="http://www.sktt1shop.com/">Shop</a></li>
   </ul>
 
@@ -18,7 +19,7 @@
     <div class="Title"><span class="SK">SK</span> telecom</div>
     <p class="center"><img src="Images/sktlogo.png" width="175" height="120"></p>
   </header>
-  
+
   <div>
     <h1>SKY</h1>
     <img class="left" src="images/sky.png">
