--- a/roster.html
+++ b/roster.html
@@ -23,84 +23,65 @@
   <section>
     <h1>ROSTER</h1>
 
-    <div>
-      <a href="Huni.html" target="_self">
-        <img src="images/huni.png" width="200" height="259">
-      </a>
+    <div id="Huni">
+      <img src="images/huni.png" width="200" height="259">
       <h2>Huni</h2>
     </div>
 
-    <div>
-      <a href="Untara.html" target="_self">
-        <img src="images/untara.png" width="200" height="259">
-      </a>
+    <div id="Untara">
+      <img src="images/untara.png" width="200" height="259">
       <h2>Untara</h2>
     </div>
 
-    <div>
-      <a href="Peanut.html" target="_self">
-        <img src="images/peanut.png" width="200" height="259">
-      </a>
+    <div id="Peanut">
+      <img src="images/peanut.png" width="200" height="259">
       <h2>Peanut</h2>
     </div>
 
-    <div>
-      <a href="Blank.html" target="_self">
-        <img src="images/blank.png" width="200" height="259">
-      </a>
+    <div id="Blank">
+      <img src="images/blank.png" width="200" height="259">
       <h2>Blank</h2>
     </div>
 
-    <div>
-      <a href="Faker.html" target="_self">
-        <img src="images/faker.png" width="200" height="259">
-      </a>
+    <div id="Faker">
+      <img src="images/faker.png" width="200" height="259">
       <h2>Faker</h2>
     </div>
 
-    <div>
-      <a href="Sky.html" target="_self">
-        <img src="images/sky.png" width="200" height="259">
-      </a>
+    <div id="Sky">
+      <img src="images/sky.png" width="200" height="259">
       <h2>Sky</h2>
     </div>
 
-    <div>
-      <a href="Bang.html" target="_self">
-        <img src="images/bang.png" width="200" height="259">
-      </a>
+    <div id="Bang">
+      <img src="images/bang.png" width="200" height="259">
       <h2>Bang</h2>
     </div>
 
-    <div>
-      <a href="Wolf.html" target="_self">
-        <img src="images/wolf.png" width="200" height="259">
-      </a>
+    <div id="Wolf"> 
+      <img src="images/wolf.png" width="200" height="259">
       <h2>Wolf</h2>
     </div>
 
-    <div>
-      <a href="cCarter.html" target="_self">
-        <img src="images/ccarter.png" width="200" height="259">
-      </a>
+    <div id="cCarter">
+      <img src="images/ccarter.png" width="200" height="259">
       <h2>cCarter</h2>
     </div>
 
-    <div>
-      <a href="kkOma.html" target="_self">
-        <img src="images/kkoma.png" width="200" height="259">
-      </a>
+    <div id="kkOma">
+      <img src="images/kkoma.png" width="200" height="259">
       <h2>kkOma</h2>
     </div>
 
-    <div>
-      <a href="Rapidstar.html" target="_self">
-        <img src="images/rapidstar.png" width="200" height="259">
-      </a>
+    <div id="Rapidstar">
+      <img src="images/rapidstar.png" width="200" height="259">
       <h2>Rapidstar</h2>
     </div>
+
   </section>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
