--- a/Huni.html
+++ b/Huni.html
@@ -35,7 +35,7 @@
     <p><span class="subject">Mouse:</span> Razer Deathadder</p>
   </div>
   
-  <h2>Huni in joy after beating Bang in a duel</h2>
+  <h2>Huni DESTROYS Bang in a duel</h2>
   <iframe width="640" height="360" src="https://www.youtube.com/embed/KJdHKFfp-Rc" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
