--- a/Sky.html
+++ b/Sky.html
@@ -35,7 +35,7 @@
     <p><span class="subject">Mouse:</span> Team Scorpion X-Luca</p>
   </div>
 
-  <h2>Sky gets a bug where an enemy seems to attack him but isn't nearby</h2>
+  <h2>Sky sees an enemy for a brief moment before disappearing</h2>
   <iframe width="640" height="360" src="https://www.youtube.com/embed/_anjrzK_ri8" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
