--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <section>
     <h1>THE TEAM</h1>
     <p class="center">
-      <img id="team1" src="images/team1.jpg" alt="SK Telecom T1 roster" width="640" height="457">
-      <img id="team2" src="images/team2.jpg" alt="SK Telecom T1 roster" width="640" height="457">
-      <img id="team3" src="images/team3.jpg" alt="SK Telecom T1 roster" width="640" height="457">
-      <img id="team4" src="images/team4.png" alt="SK Telecom T1 roster" width="640" height="457">
-      <img id="team5" src="images/team5.jpg" alt="SK Telecom T1 roster" width="640" height="457">
+      <img id="img1" src="images/team1.jpg" alt="SK Telecom T1 roster" width="640" height="457">
+      <img id="img2" src="images/team2.jpg" alt="SK Telecom T1 roster" width="640" height="457">
+      <img id="img3" src="images/team3.jpg" alt="SK Telecom T1 roster" width="640" height="457">
+      <img id="img4" src="images/team4.png" alt="SK Telecom T1 roster" width="640" height="457">
+      <img id="img5" src="images/team5.jpg" alt="SK Telecom T1 roster" width="640" height="457">
     </p>
     <button id="prev">&#8249;</button>
     <button id="next">&#8250;</button>
