--- a/Bang.html
+++ b/Bang.html
@@ -35,7 +35,7 @@
     <p><span class="subject">Mouse:</span> Razer Deathadder Chroma</p>
   </div>
   
-  <h2>Bang shocked after falling off cliff</h2>
+  <h2>Bang falls off cliff</h2>
   <iframe width="640" height="360" src="https://www.youtube.com/embed/qTfKen_9rTM" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
