--- a/Peanut.html
+++ b/Peanut.html
@@ -35,7 +35,7 @@
     <p><span class="subject">Mouse:</span> Logitech G1</p>
   </div>
 
-  <h2>Peanut laughing after his enemy makes a mistake</h2>
+  <h2>Peanut duels Lee "Rush" Yoon-jae</h2>
   <iframe width="640" height="360" src="https://www.youtube.com/embed/9voecSdXTz4" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
