--- a/quizindex.html
+++ b/quizindex.html
@@ -3,22 +3,12 @@
 
 <head>
   <title>SKT Quiz</title>
-  <link rel="stylesheet" type="text/css" href="/css/quizstyle.css">
+  <link rel="stylesheet" type="text/css" href="css/quizstyle.css">
 </head>
 
 <body>
 
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="roster.html">Roster</a></li>
-    <li><a href="quiz.html">Quiz</a></li>
-    <li><a href="http://www.sktt1shop.com/">Shop</a></li>
-  </ul>
-  
-  <header>
-    <p class="Title"><span class="SK">SK</span> telecom Quiz</p>
-    <p class="center"><img src="images/sktlogo.png" width="175" height="120"></p>
-  </header>
+  <h1>SKT QUIZ</h1>
 
   <div id="question1">
     <p>1. What was Faker's original summoner name?</p>
@@ -68,7 +58,7 @@
   <div><button id="mark">Mark Quiz</button></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
