--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+  
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="roster.html">Roster</a></li>
+    <li><a href="quiz.html">Quiz</a></li>
+    <li><a href="http://www.sktt1shop.com/">Shop</a></li>
+  </ul>
+
+  <header>
+    <p class="Title"><span class="SK">SK</span> telecom</p>
+    <p class="center"><img src="Images/sktlogo.png" width="175" height="120"></p>
+  </header>
 
   <h1>SKT QUIZ</h1>
 
