--- a/roster.html
+++ b/roster.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>SK Telecom T1</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/mainstyle.css">
 </head>
 
 <body>
@@ -11,7 +11,7 @@
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
-    <li><a href="quizindex.html">Quiz</a></li>
+    <li><a href="quiz.html">Quiz</a></li>
     <li><a href="http://www.sktt1shop.com/">Shop</a></li>
   </ul>
 
