--- a/Rapidstar.html
+++ b/Rapidstar.html
@@ -12,12 +12,12 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
     <li><a href="quiz.html">Quiz</a></li>
-    <li><a href="http://www.sktt1shop.com/">Shop</a></li>
+    <li><a href="https://shop-t1.gg/">Shop</a></li>
   </ul>
 
   <header>
     <div class="Title"><span class="SK">SK</span> telecom</div>
-    <p class="center"><img src="Images/sktlogo.png" width="175" height="120"></p>
+    <p class="logo"><img src="Images/sktlogo.png" width="175" height="120"></p>
   </header>
   
   <div>
