--- a/quiz.html
+++ b/quiz.html
@@ -26,9 +26,9 @@
     <p>1. What was Faker's original summoner name?</p>
     <img src="images/faker.jpg" width="700" height="525"> <br>
     <input type="radio" name="option" value="A"> Hide on Bush <br>
-    <input type="radio" name="option" value="B"> SKT T1 Faker <br>
+    <input type="radio" name="option" value="B"> barcodekiller <br>
     <input type="radio" name="option" value="C"> GoJeonPa <br>
-    <input type="radio" name="option" value="D"> mid fekar <br>
+    <input type="radio" name="option" value="D"> Koearn <br>
   </div>
 
   <div id="question2">
@@ -70,7 +70,7 @@
   <div><button id="mark">Mark Quiz</button></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/quiz.js"></script>
 </body>
 
 </html>
