Final this time (actually)

--- a/quiz.html
+++ b/quiz.html
@@ -64,10 +64,14 @@
     <button id="b4">2015</button>
   </div>
 
+  <div>
+    <button id="prev">Prev</button> 
+    <button id="next">Next</button>
+  </div>
 
-  <div><button id="prev">Prev</button> <button id="next">Next</button></div>
-
-  <div><button id="mark">Mark Quiz</button></div>
+  <div>
+    <button id="mark">Mark Quiz</button>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/quiz.js"></script>
