ok i cba final actually

--- a/quiz.html
+++ b/quiz.html
@@ -57,7 +57,7 @@
 
   <div id="question5">
     <p>5. Which year was SKT awarded Best e-Sports Team of the Year? </p>
-    <img src="images/team1.jpg" width="640" height="480"> <br>
+    <img src="images/2016.jpeg" width="725" height="425"> <br>
     <button id="b1">2016</button>
     <button id="b2">2013</button>
     <button id="b3">2017</button>
