--- a/Sky.html
+++ b/Sky.html
@@ -9,7 +9,7 @@
 <body>
 
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="home.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
     <li><a href="quiz.html">Quiz</a></li>
     <li><a href="https://shop-t1.gg/">Shop</a></li>
@@ -35,8 +35,8 @@
     <p><span class="subject">Mouse:</span> Team Scorpion X-Luca</p>
   </div>
 
-  <h2>Sky sees an enemy for a brief moment before disappearing</h2>
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/_anjrzK_ri8" allowfullscreen="allowfullscreen"></iframe>
+  <h2>Sky's insane movement in a 1v2 outplay</h2>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/t-046PAHMdw" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
 
