--- a/Wolf.html
+++ b/Wolf.html
@@ -9,7 +9,7 @@
 <body>
   
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="home.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
     <li><a href="quiz.html">Quiz</a></li>
     <li><a href="https://shop-t1.gg/">Shop</a></li>
@@ -35,8 +35,8 @@
     <p><span class="subject">Mouse:</span> Razer Ouroboros</p>
   </div>
 
-  <h2>Wolf speaking English</h2>
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/IEgWQB8-iI0" allowfullscreen="allowfullscreen"></iframe>
+  <h2>Wolf getting mad at Jensen inting</h2>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/YF2-5V-Bq78" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
 
