--- a/kkOma.html
+++ b/kkOma.html
@@ -9,7 +9,7 @@
 <body>
   
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="home.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
     <li><a href="quiz.html">Quiz</a></li>
     <li><a href="https://shop-t1.gg/">Shop</a></li>
@@ -35,8 +35,8 @@
     <p><span class="subject">Mouse:</span> Razer Mamba 4G</p>
   </div>
 
-  <h2>kkOma dies to a neutral monster</h2>
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/h_6aMOjLdOM" allowfullscreen="allowfullscreen"></iframe>
+  <h2>kkOma getting the belt out for Peanut</h2>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/Q2vk4wA-LvM" allowfullscreen="allowfullscreen"></iframe>
 
 
 </body>
