--- a/Bang.html
+++ b/Bang.html
@@ -9,7 +9,7 @@
 <body>
   
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="home.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
     <li><a href="quiz.html">Quiz</a></li>
     <li><a href="https://shop-t1.gg/">Shop</a></li>
@@ -35,8 +35,8 @@
     <p><span class="subject">Mouse:</span> Razer Deathadder Chroma</p>
   </div>
   
-  <h2>Bang falls off cliff</h2>
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/qTfKen_9rTM" allowfullscreen="allowfullscreen"></iframe>
+  <h2>Bang trolling the audience</h2>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/YxwPa6u3qVw" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
 
