--- a/Blank.html
+++ b/Blank.html
@@ -9,7 +9,7 @@
 <body>
   
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="home.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
     <li><a href="quiz.html">Quiz</a></li>
     <li><a href="https://shop-t1.gg/">Shop</a></li>
@@ -35,8 +35,8 @@
     <p><span class="subject">Mouse:</span> SteelSeries Sensei Laser (Fnatic Black & White)</p>
   </div>
 
-  <h2>Blank demonstrates his rapping ability</h2>
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/STFWEu0lsV0" allowfullscreen="allowfullscreen"></iframe>
+  <h2>Blank's clean insec</h2>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/HxuHUdUfJ6w" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
 
