--- a/Faker.html
+++ b/Faker.html
@@ -9,7 +9,7 @@
 <body>
 
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="home.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
     <li><a href="quiz.html">Quiz</a></li>
     <li><a href="https://shop-t1.gg/">Shop</a></li>
@@ -35,8 +35,8 @@
     <p><span class="subject">Mouse:</span> Razer Deathadder Chroma</p>
   </div>
   
-  <h2>Faker gets a 5 person multi kill</h2>
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/f9AaRNTVbPU" allowfullscreen="allowfullscreen"></iframe>
+  <h2>Faker's historic 1v1 vs Ryu</h2>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/o8vGaC4OZIs" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
 
