--- a/Untara.html
+++ b/Untara.html
@@ -9,7 +9,7 @@
 <body>
   
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="home.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
     <li><a href="quiz.html">Quiz</a></li>
     <li><a href="https://shop-t1.gg/">Shop</a></li>
@@ -35,8 +35,8 @@
     <p><span class="subject">Mouse:</span> -</p>
   </div>
 
-  <h2>Untara watching a high rank enemy player making a false prediction</h2>
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/o09IZo47WsU" allowfullscreen="allowfullscreen"></iframe>
+  <h2>Untara duoing with Blank</h2>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/trePtx1WicQ" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
 
