ok final this time no cap

--- a/Huni.html
+++ b/Huni.html
@@ -9,7 +9,7 @@
 <body>
 
   <ul>
-    <li><a href="home.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
     <li><a href="quiz.html">Quiz</a></li>
     <li><a href="https://shop-t1.gg/">Shop</a></li>
@@ -36,7 +36,7 @@
   </div>
   
   <h2>Huni DESTROYS Bang in a duel</h2>
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/YxwPa6u3qVw" allowfullscreen="allowfullscreen"></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/KJdHKFfp-Rc" allowfullscreen="allowfullscreen"></iframe>
 
 </body>
 
