--- a/Sky.html
+++ b/Sky.html
@@ -9,7 +9,7 @@
 <body>
 
   <ul>
-    <li><a href="home.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="roster.html">Roster</a></li>
     <li><a href="quiz.html">Quiz</a></li>
     <li><a href="https://shop-t1.gg/">Shop</a></li>
